Fix visual rect for background box painting in composited scrollers.

Use the scrolling contents GraphicsLayer as the DisplayItemClient for the
background drawing when we're painting the full background of a composited
scroller.

BUG=638611
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2254893005
Cr-Commit-Position: refs/heads/master@{#413340}

Former-commit-id: ff27367de0553a7aa38f078e528d19024f2d3668